--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@dimfu/recipe-scraper": "^0.3.0",
+    "axios": "^1.9.0",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "flowbite-react": "^0.11.7",
+    "jsdom": "^26.1.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
