--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dimfu/recipe-scraper": "^0.3.0",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
